[project]
name = "winzy-days-from"
version = "0.0.1"
description = "Calculates future date from number of days"
readme = "README.md"
authors = [{name = "Sukhbinder Singh"}]
license = {text = "Apache-2.0"}
classifiers = [
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "winzy",
]

[project.urls]
Homepage = "https://github.com/sukhbinder/winzy-days-from"
Changelog = "https://github.com/sukhbinder/winzy-days-from/releases"
Issues = "https://github.com/sukhbinder/winzy-days-from/issues"
CI = "https://github.com/sukhbinder/winzy-days-from/actions"

[project.entry-points."winzy.plugins"]
daysfrom = "winzy_days_from:daysfrom_plugin"


[project.optional-dependencies]
test = ["pytest"]

[tool.pytest.ini_options]
pythonpath = ["."]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
